# pybackup

./: .env  .gitignore  README.md  pyproject.toml
src/: app.py  config.py  functions.py
